# bro-skills

./: .clinerules  .gitignore  .roomember  .traerules  AGENTS.md  CLAUDE.md  LICENSE  READEME_AGENT.md  README.md  README.vi.md  install.ps1  install.sh  package.json  pyproject.toml  ssd.py
.agent/: README.md  project.json
.agent/agents/: orchestrator.md  registry.json
.agent/identity/: master-identity.md
.agent/knowledge_base/: api_standards.md  business_logic.md  data_schema.md  infrastructure.md  seo_standards.md  ui_ux_standards.md
.agent/memory/: constitution.md
.agent/rules/: bro-agent.md  bro-skills.md
.agent/scripts/: bump_version.py  sync-skills.ps1
.agent/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  (+2 more)
.agent/templates/: constitution-template.md  infrastructure-template.md  plan-template.md  seo-standards-template.md  spec-template.md  tasks-template.md  ui-ux-standards-template.md
.agent/workflows/: 00-speckit.all.md  01-speckit.constitution.md  02-speckit.specify.md  03-speckit.clarify.md  04-speckit.plan.md  05-speckit.tasks.md  06-speckit.analyze.md  07-speckit.implement.md  08-speckit.checker.md  09-speckit.tester.md  10-speckit.reviewer.md  11-speckit.validate.md  12-speckit.seo.md  13-speckit.geo.md  conductor-implement.md  full-stack-orchestration-full-stack-feature.md  speckit.3d.md  speckit.backlog.md  speckit.debug.md  speckit.devops.md  speckit.gamedev.md  speckit.identity.md  speckit.map.md  speckit.orchestrate.md  speckit.prepare.md  speckit.roadmap.md  speckit.uat.md  speckit.wordpress.md  util-speckit.bumpversion.md  util-speckit.checklist.md  util-speckit.content.md  util-speckit.diff.md  util-speckit.migrate.md  util-speckit.quizme.md  util-speckit.status.md  util-speckit.taskstoissues.md  util-speckit.uiux.md
.agents/: AGENTS.md
.aiassistant/rules/: bro-agent.md  bro-skills.md
.continue/: config.json
.cursor/rules/: bro-agent.mdc  bro-skills.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.kiro/hooks/: speckit-all-pipeline.kiro.hook  speckit-autocommit.kiro.hook  speckit-constitution.kiro.hook  speckit-implement.kiro.hook  speckit-plan.kiro.hook  speckit-specify.kiro.hook  speckit-tasks.kiro.hook
.kiro/steering/: tech.md
.opencode/rules/: bro-skills.md
.windsurf/rules/: bro-agent.md  bro-skills.md
bro_agent/: __init__.py  __main__.py  cli.py  generator.py  registry.py  scanner.py  skill_templates.py  templates.py  validators.py  workflow_templates.py
bro_skills/: __init__.py  __main__.py  cli.py  generator.py  registry.py  scanner.py  skill_templates.py  templates.py  validators.py  workflow_templates.py
docs/: antigravity-cli-setup.md  copilot-setup.md  cursor-setup.md  gemini-cli-setup.md  getting-started.md  kiro-setup.md  opencode-setup.md  skill-anatomy.md  windsurf-setup.md
npm/: bro-skills.cjs
tests/: test_smoke.py
(+114 files in other folders)
