[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bro-skills"
version = "1.4.11"
description = "⚡ Spec-Driven Development CLI - Initialize ASF 3.3 projects with Antigravity standards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Antigravity Team"}
]
keywords = [
    "spec-driven-development",
    "ai-agent",
    "sdlc",
    "antigravity",
    "code-generation",
    "project-scaffolding",
    "bro-skills"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/wedabro/bro-skills"
Repository = "https://github.com/wedabro/bro-skills"
Issues = "https://github.com/wedabro/bro-skills/issues"

[project.scripts]
bro-skills = "bro_skills.cli:main"

[tool.setuptools.packages.find]
include = ["bro_skills*"]
